# cargo-generate-rpm

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: build_target.rs  cli.rs  config.rs  error.rs  file_info.rs  main.rs
src/auto_req/: builtin.rs  mod.rs  script.rs
src/config/: file_info.rs  metadata.rs  mod.rs
src/find_requires/: builtin.rs  mod.rs  script.rs
