[package]
name = "cargo-generate-rpm"
license = "MIT"
authors = ["@cat_in_136"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::build-utils"]
description = "Generate a binary RPM package (.rpm) from Cargo projects"
homepage = "https://github.com/cat-in-136/cargo-generate-rpm"
readme = "README.md"
keywords = ["rpm", "package", "cargo", "subcommand"]
repository = "https://github.com/cat-in-136/cargo-generate-rpm"
version = "0.9.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
rpm-rs = { package = "rpm", version = "0.9.0-alpha.1" }
toml = "0.5"
cargo_toml = "0.13"
getopts = "0.2"
thiserror = "1"
elf = "0.0.10"

[dev-dependencies]
tempfile = "3"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/cargo-generate-rpm", dest = "/usr/bin/cargo-generate-rpm", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/cargo-generate-rpm/LICENSE", doc = true, mode = "0644" },
    { source = "README.md", dest = "/usr/share/doc/cargo-generate-rpm/README.md", doc = true, mode = "0644" }
]
