[package]
name = "cargo-generate-rpm"
license = "MIT"
authors = ["@cat_in_136"]
categories = [
    "command-line-utilities",
    "development-tools::cargo-plugins",
    "development-tools::build-utils",
]
description = "Generate a binary RPM package (.rpm) from Cargo projects"
homepage = "https://github.com/cat-in-136/cargo-generate-rpm"
readme = "README.md"
keywords = ["rpm", "package", "cargo", "subcommand"]
repository = "https://github.com/cat-in-136/cargo-generate-rpm"
version = "0.18.1"
edition = "2024"

[dependencies]
glob = "0.3"
rpm = { version = "0.18", default-features = false, features = [
    "zstd-compression",
    "gzip-compression",
    "xz-compression",
    "bzip2-compression",
    "signature-pgp",
] }
toml = "0.9"
cargo_toml = "0.22"
clap = { version = "~4.5", features = ["derive"] }
color-print = "0.3"
thiserror = "2"
elf = "0.8"

[dev-dependencies]
tempfile = "3"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/cargo-generate-rpm", dest = "/usr/bin/cargo-generate-rpm", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/cargo-generate-rpm/LICENSE", doc = true, mode = "0644" },
    { source = "README.md", dest = "/usr/share/doc/cargo-generate-rpm/README.md", doc = true, mode = "0644" },
]
